# STAT-4830-OSO

./: .env  .env.example  .gitattributes  .gitignore  =  IPO_180Day_Index_OGD_Optimizer.ipynb  README.md  Stock_vs_IPO_Online_OGD_Portfolio_Optimizer.ipynb  WEEK3_DELIVERABLE.md  aapl_post_nyse_180d_weights.csv  build_ipo_index.py  gamma_presentation_prompt.md  generate_report.py  presentation.html  pyproject.toml  report.md  report_march6.md  requirements.txt  run_bond_optimizer.py  run_comparison.py  run_ipo_optimizer_wrds.py  run_ipo_optimizer_wrds_126.py  run_ipo_optimizer_wrds_gru.py  run_ipo_optimizer_wrds_lstm.py  run_ipo_optimizer_wrds_multisector.py  run_ipo_optimizer_wrds_sector_lstm.py  run_ipo_optimizer_wrds_transformer.py  run_pytorch.py  run_week3.py  run_week3_with_csv.py  run_week3_wrds.ps1  self_critique.md  self_critique_march6.md  udhv6eryjme9lvzb.csv
data/: README.md  cusip_gvkey_mapping.csv  ipo_cusips_2000_onward.txt  ipo_meta.csv  ritter_ipos_1975_2025.csv
datasets/: 2025iposdata.csv
docs/: APRIL10_report.md  COURSE_CONCEPTS.md  FILE_BY_FILE.md  GET_GVKEY_MAPPING.md  GRADING_CHECKLIST.md  IMPLEMENTATION_STEPS.md  IPO Portfolio Optimization GRU Allocation.pptx  IPOnames_mitigation.md  IPOnames_vs_IPO_count_explanation.md  RESULTS_GLOSSARY.md  SECTOR_CCM_WORKFLOW.md  chat_transcript.txt  development_log.md  feb_20_self_critique.md  final_report_practical.md  ipo_concentration_diagnosis.md  online_updates_short_writeup.md  presentation_outline_technical.md  project_recount_technical.md  self_critique_april10.md  self_critique_ooda.md  (+1 more)
src/: data.py  (+33 more)
(+258 files in other folders)
