[project]
name = "stat-4830-oso"
version = "0.1.0"
description = "IPO portfolio optimizer: gradient-based allocation (market vs IPO) with MLP, GRU, Transformer, Hybrid."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "torch>=1.9.0",
    "matplotlib>=3.3.0",
    "yfinance>=0.2.0",
    "pytest>=7.0.0",
    "wrds>=3.1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
